--- a/Frontend/cenndiii-shop/public/index.html
+++ b/Frontend/cenndiii-shop/public/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=0.8" />
-    <title>My Shop</title>
+    <title>Cenndii Shop</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
   </head>
+  
   <body>
     <div id="root"></div>
   </body>
